--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,19 @@
 [project]
 name = "pwnv"
-version = "0.1.0"
+version = "0.1.1"
 description = "CLI tool for CTF management"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "ctfbridge>=0.1.1",
     "inquirerpy>=0.3.4",
     "pydantic>=2.10.3",
     "typer>=0.15.1",
-    "uv>=0.5.9",
+    # "uv>=0.5.9",
 ]
 
 [project.scripts]
 pwnv = "pwnv:main"
+
+[tool.uv.workspace]
+members = ["CTF_test", "CTF"]
