--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,11 @@ ignore = ["F403", "F405"]
 
 [project.scripts]
 pwnv = "pwnv:main"
+
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools_scm]
+version_scheme = "post-release"
+local_scheme = "no-local-version"
